1. Added settings activity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ android {
             buildConfigField 'boolean', 'LOG_VALUE', 'true'
             resValue "string", "app_name", "Connect dev"
         }
-        client_staging {
+        /*client_staging {
             buildConfigField 'String', 'SERVICE_ENDPOINT', "\"http://ec2-52-11-96-200.us-west-2.compute.amazonaws.com:9898/connect/\""
             buildConfigField 'boolean', 'LOG_VALUE', 'false'
             resValue "string", "app_name", "Connect stage"
@@ -52,7 +52,7 @@ android {
             buildConfigField 'String', 'SERVICE_ENDPOINT', "\"http://ec2-52-11-96-200.us-west-2.compute.amazonaws.com:9898/connect/\""
             buildConfigField 'boolean', 'LOG_VALUE', 'false'
             resValue "string", "app_name", "Connect pro"
-        }
+        }*/
     }
 
     dataBinding {
