--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,12 +37,14 @@
             android:screenOrientation="portrait"
 
             />
-        <activity android:name=".ui.home.HomeActivity"
-            android:configChanges="orientation|keyboardHidden"
-            android:screenOrientation="portrait"/>
         <activity android:name=".ui.warrantyregistration.WarrantyRegistration"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"></activity>
+        <activity android:name=".ui.homescan.HomeScanActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait">
+
+        </activity>
 
 
     </application>
