--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,7 +74,7 @@
             android:screenOrientation="portrait">
         </activity>
         <activity
-            android:name="com.incon.connect.ui.RegistrationmapActivity"
+            android:name="com.incon.connect.ui.RegistrationMapActivity"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait">
         </activity>
