--- a/app/configuration.gradle
+++ b/app/configuration.gradle
@@ -11,6 +11,7 @@ ext {
 
     //Libraries
     supportLibraryVersion = '25.3.1'
+    googlePlayVersion = '10.0.1'
     daggerVersion = '2.0.2'
     retrofitVersion = '2.2.0'
     okhttpVersion = '3.8.0'
