--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.incon.connect">
 
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <uses-permission android:name="android.permission.CAMERA"/>
+
+
+    <!--Writing files into sd card for capturing images-->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
 
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
@@ -16,8 +22,9 @@
         android:protectionLevel="signature"/>
 
     <uses-permission android:name="com.incon.connect.permission.MAPS_RECEIVE"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
     <application
         android:name="com.incon.connect.ConnectApplication"
         android:allowBackup="true"
@@ -47,7 +54,7 @@
             android:name="com.incon.connect.ui.forgotpassword.ForgotPasswordActivity"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize" />
+            android:windowSoftInputMode="adjustResize"/>
 
         <activity
             android:name="com.incon.connect.ui.resetpassword.ResetPasswordPromptActivity"
@@ -58,9 +65,15 @@
 
         <activity
             android:name="com.incon.connect.ui.register.RegistrationActivity"
-            android:configChanges="orientation|keyboardHidden"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize">
+        </activity>
+
+        <activity
+            android:name="com.incon.connect.ui.fullscreenimageview.FullScreenImageViewActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait">
         </activity>
 
         <activity
@@ -98,17 +111,20 @@
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"/>
 
-        <activity android:name=".ui.warrantyregistration.WarrantyRegistrationActivity"
+        <activity
+            android:name=".ui.warrantyregistration.WarrantyRegistrationActivity"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait">
 
         </activity>
 
-        <activity android:name=".ui.addoffer.AddOfferActivity"
+        <activity
+            android:name=".ui.addoffer.AddOfferActivity"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait">
 
         </activity>
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_map_key"/>
