--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,8 +52,7 @@
         <activity
             android:name="com.incon.connect.ui.forgotpassword.ForgotPasswordActivity"
             android:configChanges="orientation|keyboardHidden"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"/>
+            android:screenOrientation="portrait"/>
 
         <activity
             android:name="com.incon.connect.ui.resetpassword.ResetPasswordPromptActivity"
