--- a/app/build.gradle
+++ b/app/build.gradle
@@ -130,6 +130,9 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:4.0.0'
     //QR and Bar code scanner
     compile 'me.dm7.barcodescanner:zxing:1.9.8'
+    // QR and Bar code scanner
+    compile 'com.journeyapps:zxing-android-embedded:3.3.0'
+    compile 'com.google.zxing:core:3.3.0'
 
     //Hockey analytics
     compile 'net.hockeyapp.android:HockeySDK:4.1.5'
