--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -130,6 +130,18 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_map_key"/>
 
+        <service android:name="com.incon.connect.fcm.ConnectFirebaseMessagingService">
+            <intent-filter >
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+
+        <service android:name="com.incon.connect.fcm.ConnectFirebaseInstanceIDService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+            </intent-filter>
+        </service>
+
     </application>
 
 
