--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -91,6 +91,7 @@
         <activity
             android:name="com.incon.connect.ui.RegistrationMapActivity"
             android:configChanges="orientation|keyboardHidden"
+            android:theme="@style/dialog_theme"
             android:screenOrientation="portrait">
         </activity>
         <activity
